[project]
name = "networksecurity"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "certifi>=2025.11.12",
    "dagshub>=0.6.3",
    "dill>=0.4.0",
    "dotenv>=0.9.9",
    "fastapi==0.123.8",
    "mlflow==2.8.1",
    "numpy==1.26.4",
    "pandas>=2.3.3",
    "pyaml>=25.7.0",
    "pymongo>=4.15.4",
    "python-multipart>=0.0.20",
    "scikit-learn>=1.7.2",
    "setuptools>=80.9.0",
    "uvicorn>=0.38.0",
]
